<resources>
    <string name="app_name">app Note</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="note_title">Note title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="add">ADD</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="email">Email</string>
    <string name="register">REGISTER</string>
    <string name="you_gmail_com">you@gmail.com</string>
    <string name="password">Password</string>
    <string name="your_password">your password</string>
    <string name="click_to_login">Click to Login</string>
    <string name="fogot_password">Fogot Password?</string>
    <string name="login">Login</string>
    <string name="click_to_register">Click to Register</string>
</resources>