<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.AccountInfoActivity">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorIcons" />

    <ImageView
        android:id="@+id/accountInfoSave"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/background_done_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageBack"
        app:tint="@color/colorIcons" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:adjustViewBounds="true"
        android:src="@drawable/notesicon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack"
        app:riv_corner_radius="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tvAccountInfo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="Account Info"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintLeft_toRightOf="@id/imageBack"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image">

        <TextView
            android:id="@+id/lbEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15ssp" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:enabled="false"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center_vertical"
            android:hint="@string/you_gmail_com"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutEmail">

        <TextView
            android:id="@+id/lbName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="Name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15ssp" />

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu_medium"
            android:gravity="center_vertical"
            android:hint="input your name"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>